# sort-obsidian-mds

./: README.md  main.py  pyproject.toml  test_main.py
.github/workflows/: python-package-conda.yml  python-poetry.yml
