[tool.poetry]
name = "sort-obsidian-mds"
version = "0.1.0"
description = ""
authors = ["tumf <y@tumf.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.37.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false
